--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -2,13 +2,13 @@
 
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
 
-<link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png">
-<link rel="manifest" href="/assets/images/site.webmanifest">
-<link rel="shortcut icon" href="/assets/images/favicon.ico">
+<link rel="apple-touch-icon" sizes="180x180" href="https://github.com/pharath/home/tree/master/assets/images/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://github.com/pharath/home/tree/master/assets/images/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="https://github.com/pharath/home/tree/master/assets/images/favicon-16x16.png">
+<link rel="manifest" href="https://github.com/pharath/home/tree/master/assets/images/site.webmanifest">
+<link rel="shortcut icon" href="https://github.com/pharath/home/tree/master/assets/images/favicon.ico">
 <meta name="msapplication-TileColor" content="#da532c">
-<meta name="msapplication-config" content="/assets/images/browserconfig.xml">
+<meta name="msapplication-config" content="https://github.com/pharath/home/tree/master/assets/images/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
 
 <!-- end custom head snippets -->
